<resources>


    <!-- Fonts -->
    <string name="helveticaneue_ltstd_bd">helveticaneue_ltstd_bd.otf</string>
    <string name="helveticaneue_ltstd_cn">helveticaneue_ltstd_cn.otf</string>
    <string name="helveticaneue_ltstd_lt">helveticaneue_ltstd_lt_.otf</string>
    <string name="helveticaneue_ltstd_roman">helveticaneue_ltstd_roman.otf</string>

    <string name="app_name">FindGarage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="user">User</string>
    <string name="partner">Partner</string>

    <!-- login screen -->
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="login">LOGIN</string>
    <string name="cbRemeberMe">Remember me</string>
    <string name="offline_login">Offline Login Success.</string>
    <string name="firstTimeLoginError">This is your first login. Kindly enable network and do online
        login.
    </string>
    <string name="valid_user_details">Please provide valid username and password.</string>
    <string name="powered_by_mobicule_tech">Powered by MobiCule Technologies Pvt. Ltd.</string>
    <!-- dialog -->
    <!-- default -->
    <string name="timerVal">00:00</string>
    <string name="dialogTitle">Title</string>
    <string name="dialogContent">content of dialogues.</string>
    <string name="dialogBtNo">NO</string>
    <string name="dialogBtYes">YES</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>

    <!-- Camra preview -->
    <string name="button_discard">DISCARD</string>
    <string name="save">SAVE</string>
    <string name="content_description">Content Description</string>

</resources>
