<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edelweiss.nikhilnagpure.findgarage.login.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.edelweiss.nikhilnagpure.findgarage.custom.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="30dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="50sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/user3" />

                    <com.edelweiss.nikhilnagpure.findgarage.custom.CustomAutocompleteTextView
                        android:id="@+id/catvUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/userName"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/btLogin"
                        android:padding="@dimen/login_textsize"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/login_textsize" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="center"
                        android:src="@drawable/lock" />


                    <com.edelweiss.nikhilnagpure.findgarage.custom.CustomAutocompleteTextView
                        android:id="@+id/catvPassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:hint="@string/passWord"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/btLogin"
                        android:padding="@dimen/login_textsize"
                        android:singleLine="true"
                        android:textColor="#FFFFFF"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/login_textsize" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <com.edelweiss.nikhilnagpure.findgarage.custom.CustomFontTextView
                        android:id="@+id/tvCheckBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.40"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/cbRemeberMe"
                        android:textColor="#4DFFFFFF"
                        android:textSize="@dimen/login_textsize" />

                    <com.edelweiss.nikhilnagpure.findgarage.custom.CustomCheckBox
                        android:id="@+id/cbRemeberMe"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:button="@drawable/cb_button"
                        android:gravity="center"></com.edelweiss.nikhilnagpure.findgarage.custom.CustomCheckBox>

                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".40"
                        android:background="@drawable/button_shape"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/login_textsize"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
